使用serialGC